feature: get data from firebase backend

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- update the version number as needed -->
+    <script defer src="/__/firebase/8.1.2/firebase-app.js"></script>
+    <!-- include only the Firebase features as you need -->
+    <script defer src="/__/firebase/8.1.2/firebase-database.js"></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
