--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,12 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <!-- update the version number as needed -->
-    <script defer src="/__/firebase/8.1.2/firebase-app.js"></script>
+<!--    <script defer src="/__/firebase/8.1.2/firebase-app.js"></script>-->
     <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/8.1.2/firebase-database.js"></script>
+<!--    <script defer src="/__/firebase/8.1.2/firebase-database.js"></script>-->
+<!--    <script defer src="/__/firebase/8.1.2/firebase-auth.js"></script>-->
+<!--    <script defer src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>-->
+<!--    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />-->
 
     <div id="root"></div>
     <!--
